--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+#root {
+  height: 100%;
+  width: 100%;
+}
