--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: inherit;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
-  overflow: hidden;
 }
 #root {
   height: 100%;
